# cfg

./: ChangeLog  Makefile.am  NEWS  autogen.sh  cfg.conf.sample  configure.ac
src/: Makefile.am  cfg  cfg-helper.c  cfg.in  cfgd.c
